tmp.txt
In file included from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.hpp:10,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:1:
/home/sakakibara/monte-carlo-ray-tracer_approx/lib/nlohmann/nlohmann/json.hpp: In static member function 'static CharType nlohmann::detail::binary_writer<BasicJsonType, CharType>::to_char_type(uint8_t)':
/home/sakakibara/monte-carlo-ray-tracer_approx/lib/nlohmann/nlohmann/json.hpp:12484:28: warning: 'template<class _Tp> struct std::is_pod' is deprecated: use is_standard_layout && is_trivial instead [-Wdeprecated-declarations]
12484 |         static_assert(std::is_pod<CharType>::value, "CharType must be POD");
      |                            ^~~~~~
In file included from /home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/ratio:39,
                 from /home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/chrono:39,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.hpp:3,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:1:
/home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/type_traits:700:5: note: declared here
  700 |     is_pod
      |     ^~~~~~
In file included from /home/sakakibara/monte-carlo-ray-tracer_approx/lib/glm/glm/detail/type_half.hpp:16,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/lib/glm/glm/detail/func_packing.inl:5,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/lib/glm/glm/packing.hpp:173,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/lib/glm/glm/glm.hpp:132,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/film.hpp:7,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.hpp:13,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:1:
/home/sakakibara/monte-carlo-ray-tracer_approx/lib/glm/glm/detail/type_half.inl: In function 'float glm::detail::overflow()':
/home/sakakibara/monte-carlo-ray-tracer_approx/lib/glm/glm/detail/type_half.inl:9:27: warning: compound assignment with 'volatile'-qualified left operand is deprecated [-Wvolatile]
    9 |                         f *= f; // this will overflow before the for loop terminates
      |                         ~~^~~~
/home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp: In member function 'void Camera::sampleImage()':
/home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:134:110: error: no matching function for call to 'forward<void, Camera*, WorkQueue<Camera::Bucket>&>(std::function<void(Camera*, WorkQueue<Camera::Bucket>&)>&)'
  134 |         thread = std::unique_ptr<std::thread>(new std::thread(std::forward<void, Camera*, WorkQueue<Bucket>&>(f)(this)(std::ref(buckets))));
      |                                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
In file included from /home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/bits/stl_pair.h:59,
                 from /home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/bits/stl_algobase.h:64,
                 from /home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/deque:60,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.hpp:4,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:1:
/home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/bits/move.h:77:5: note: candidate: 'template<class _Tp> constexpr _Tp&& std::forward(typename std::remove_reference<_Tp>::type&)'
   77 |     forward(typename std::remove_reference<_Tp>::type& __t) noexcept
      |     ^~~~~~~
/home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/bits/move.h:77:5: note:   template argument deduction/substitution failed:
/home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:134:110: error: wrong number of template arguments (3, should be 1)
  134 |         thread = std::unique_ptr<std::thread>(new std::thread(std::forward<void, Camera*, WorkQueue<Bucket>&>(f)(this)(std::ref(buckets))));
      |                                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
In file included from /home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/bits/stl_pair.h:59,
                 from /home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/bits/stl_algobase.h:64,
                 from /home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/deque:60,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.hpp:4,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:1:
/home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/bits/move.h:77:5: note: provided for 'template<class _Tp> constexpr _Tp&& std::forward(typename std::remove_reference<_Tp>::type&)'
   77 |     forward(typename std::remove_reference<_Tp>::type& __t) noexcept
      |     ^~~~~~~
/home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/bits/move.h:89:5: note: candidate: 'template<class _Tp> constexpr _Tp&& std::forward(typename std::remove_reference<_Tp>::type&&)'
   89 |     forward(typename std::remove_reference<_Tp>::type&& __t) noexcept
      |     ^~~~~~~
/home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/bits/move.h:89:5: note:   template argument deduction/substitution failed:
/home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:134:110: error: wrong number of template arguments (3, should be 1)
  134 |         thread = std::unique_ptr<std::thread>(new std::thread(std::forward<void, Camera*, WorkQueue<Bucket>&>(f)(this)(std::ref(buckets))));
      |                                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
In file included from /home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/bits/stl_pair.h:59,
                 from /home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/bits/stl_algobase.h:64,
                 from /home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/deque:60,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.hpp:4,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:1:
/home/sakakibara/opt/gcc/riscv64-elf/11.1_approx/riscv64-unknown-elf/include/c++/11.1.0/bits/move.h:89:5: note: provided for 'template<class _Tp> constexpr _Tp&& std::forward(typename std::remove_reference<_Tp>::type&&)'
   89 |     forward(typename std::remove_reference<_Tp>::type&& __t) noexcept
      |     ^~~~~~~
make[2]: *** [CMakeFiles/monte-carlo-ray-tracer.dir/build.make:90: CMakeFiles/monte-carlo-ray-tracer.dir/source/camera/camera.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/monte-carlo-ray-tracer.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
